# longshore

./: .gitignore  Cargo.toml  index.html  package.json
src/: App.vue  Builder.vue  Configure.vue  main.ts  prime.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cargo_info.pest  cargo_info.rs  crates.toml  lib.rs  main.rs  packages.rs
src/components/: TopMenu.vue
