[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Kendra"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
derive_more = { version = "1.0", features = ["full"] }
derive-new = "0.7"
dotenvy = { version = "0.15" }
either = "1.13"
futures = "0.3"
frunk = "0.4"
hostname = "0.4"
itertools = "0.13"
rocket = { version = "0.5", features = ["json", "serde_json", "uuid"] }
ws = { package = "rocket_ws", version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
thiserror = "1.0"
tokio = { version = "1.40" }
toml = { version = "0.8"}
pest = "2.6"
pest_derive = "2.6"
pest-ast = "0.3"
from-pest = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-loki = "0.2"

url = "2.5"
uuid = { version = "1.10", features = ["serde", "v4"] }
