[package]
name = "cargo-workspace-builder"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cargo_workspace_builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

anyhow.workspace= true
serde.workspace = true
serde_json.workspace = true
derive_more.workspace = true
strum.workspace = true
derive-new.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["process"] }
pest.workspace = true
pest_derive.workspace = true
pest-ast.workspace = true
from-pest.workspace = true

[dev-dependencies]
tokio = {workspace = true, features = ["test-util", "macros"] }
